--- a/packages/vscode-extension/.vscodeignore
+++ b/packages/vscode-extension/.vscodeignore
@@ -3,12 +3,16 @@
 src/**
 .gitignore
 .yarnrc
+**/tsconfig.json
+**/.eslintrc.json
+**/*.map
+**/*.ts
 test-folder/**
 test/**
-commitlint.config.js
 build/**
 .prettierrc.json
 .prettierignore
 webpack.config.js
 .github
 node_modules
+!out/templates
