--- a/packages/vscode-extension/.vscodeignore
+++ b/packages/vscode-extension/.vscodeignore
@@ -1,13 +1,18 @@
 .vscode/**
 .vscode-test/**
 src/**
+.gitignore
+.yarnrc
+**/tsconfig.json
+**/.eslintrc.json
+**/*.map
+**/*.ts
 test-folder/**
 test/**
 build/**
-node_modules
-.github
-webpack.config.js
-.gitignore
-.yarnrc
 .prettierrc.json
 .prettierignore
+webpack.config.js
+.github
+node_modules
+!out/templates
