--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -128,6 +128,7 @@
     "mocked-env": "^1.3.2",
     "nyc": "^15.1.0",
     "playwright-chromium": "^1.11.1",
+    "puppeteer": "^9.1.1",
     "rimraf": "^3.0.0",
     "rollup": "^2.41.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
