--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -99,7 +99,7 @@
     "async-mutex": "^0.3.1",
     "axios": "^0.21.1",
     "azure-arm-resource": "^3.1.1-preview",
-    "colors": "^1.4.0",
+    "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
