--- a/packages/vscode-extension/.vscodeignore
+++ b/packages/vscode-extension/.vscodeignore
@@ -3,7 +3,10 @@
 src/**
 .gitignore
 .yarnrc
+**/tsconfig.json
+**/.eslintrc.json
 **/*.map
+**/*.ts
 test-folder/**
 test/**
 build/**
@@ -12,4 +15,4 @@ build/**
 webpack.config.js
 .github
 node_modules
-!out/templates
+!out/templates/**
