--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -103,12 +103,12 @@ jobs:
             echo "::set-output name=CHANGED::false"
           fi
 
-      - name: daily release npm packages to npmjs.org
+      - name: release alpha npm packages to npmjs.org
         if: ${{ github.event_name == 'schedule' }}
         run: |
           npx lerna publish --no-private --preid=alpha --dist-tag=alpha prerelease --yes
 
-      - name: release prerelease npm packages to npmjs.org
+      - name: release rc npm packages to npmjs.org
         if: ${{ github.event_name == 'workflow_dispatch' && startsWith(github.event.inputs.version, 'pre') }}
         run: |
           npx lerna publish --no-private --preid=${{ github.event.inputs.preid }} --dist-tag=${{ github.event.inputs.preid }} ${{ github.event.inputs.version }} --yes ${{ github.event.inputs.force }}
