--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -17,6 +17,7 @@
     "test:actions": "echo 'to be implemented'",
     "test:unit": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/**/*.test.ts",
     "test:solution": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/solution/*.test.ts",
+    "test:core": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/core/*.test.ts",
     "clean": "rm -rf build",
     "build": "rimraf build && tsc -p ./",
     "eslint:fix": "eslint package.json tsconfig.json src test --ext .ts --fix",
@@ -41,6 +42,7 @@
     "@feathersjs/hooks": "^0.6.5",
     "@microsoft/teamsfx-api": "^0.3.0-alpha.0",
     "@types/jwt-decode": "3.1.0",
+    "@types/proper-lockfile": "^4.1.1",
     "adm-zip": "^0.5.5",
     "ajv": "^7.1.1",
     "axios": "^0.21.1",
