fix: upload to github release page when bump from prerelease version to stable version

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -134,7 +134,7 @@ jobs:
             echo "::set-output name=VERSION::$VERSION"
 
       - name: release VSCode extension to github
-        if: ${{ steps.extension-checker.outputs.CHANGED == 'true' || github.event.inputs.force == '--force-publish' }}
+        if: ${{ steps.extension-checker.outputs.CHANGED == 'true' || github.event.inputs.force == '--force-publish' || (github.ref == 'refs/heads/main' && !startsWith(github.event.inputs.version, 'pre')) }}
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: ${{ secrets.CD_PAT }}
