--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,6 +49,7 @@
     "@types/chai-spies": "^1.0.3",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^8.0.1",
+    "@types/glob": "^7.1.3",
     "@types/inquirer": "^7.3.1",
     "@types/md5": "^2.3.0",
     "@types/mocha": "^8.0.4",
@@ -103,6 +104,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
+    "glob": "^7.1.6",
     "inquirer": "^8.0.0",
     "md5": "^2.3.0",
     "ms-rest-azure": "^3.0.0",
