feat(SPFx): fix configurationUrl

--- a/packages/fx-core/templates/plugins/resource/spfx/solution/manifest.json
+++ b/packages/fx-core/templates/plugins/resource/spfx/solution/manifest.json
@@ -35,7 +35,7 @@
     ],
     "configurableTabs": [
         {
-            "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest=/_layouts/15/teamshostedapp.aspx%3FopenPropertyPane=true%26teams%26componentId=<%= componentId %>%26forceLocale={locale}",
+            "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/teamshostedapp.aspx%3FopenPropertyPane=true%26teams%26componentId=<%= componentId %>%26forceLocale={locale}",
             "canUpdateConfiguration": true,
             "scopes": [
                 "team",
