--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.3",
     "@types/inquirer": "^7.3.1",
+    "@types/lodash": "^4.14.170",
     "@types/md5": "^2.3.0",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.11.7",
