chore: support conventional-commits both on main and dev

--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,9 @@
     ],
     "command": {
         "version": {
-            "message": "chore(release): publish detail"
+            "conventionalCommits": true,
+            "message": "chore(release): publish detail",
+            "allowBranch": ["main"]
         }
     },
     "publishConfig": {
