--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,13 +8,17 @@ on:
         required: true
         default: "prerelease"
       preid:
-        description: "preid name(alpha or rc)"
+        description: "preid name(alpha, rc, stable)"
         required: false
         default: "alpha"
       force:
         description: "force release even if no update(set --force-publish if necessary)"
         required: false
         default: ""
+      conventional-commits:
+        description: "bump up release version by lerna conventional commits(yes or no)"
+        required: false
+        default: "no"
   schedule:
     - cron: "0 8 * * *"
 
@@ -96,17 +100,27 @@ jobs:
       - name: release alpha npm packages to npmjs.org
         if: ${{ github.event_name == 'schedule' }}
         run: |
-          npx lerna publish --no-private --preid=alpha --dist-tag=alpha prerelease --yes
+          npx lerna publish --no-private --preid=alpha.$(git rev-parse --short HEAD) --dist-tag=alpha.$(git rev-parse --short HEAD) prerelease --no-git-tag-version --no-changelog --no-push --no-git-reset --yes --allow-branch dev
 
       - name: release rc npm packages to npmjs.org
-        if: ${{ github.event_name == 'workflow_dispatch' && startsWith(github.event.inputs.version, 'pre') }}
+        if: ${{ github.event_name == 'workflow_dispatch' && startsWith(github.event.inputs.version, 'pre') && github.events.inputs.conventional-commits == 'no'}}
         run: |
           npx lerna publish --no-private --preid=${{ github.event.inputs.preid }} --dist-tag=${{ github.event.inputs.preid }} ${{ github.event.inputs.version }} --yes ${{ github.event.inputs.force }}
 
       - name: release stable npm packages to npmjs.org
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && !startsWith(github.event.inputs.version, 'pre') }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && !startsWith(github.event.inputs.version, 'pre') && github.events.inputs.conventional-commits == 'no'}}
         run: |
           npx lerna publish --no-private --dist-tag=latest ${{ github.event.inputs.version }} --yes ${{ github.event.inputs.force }}
+
+      - name: release rc npm packages to npmjs.org by conventional-commits
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && github.events.inputs.conventional-commits == 'yes' && github.events.inputs.preid == 'rc'}}
+        run: |
+          npx lerna publish --conventional-prerelease --preid=rc --yes
+
+      - name: release stable npm packages to npmjs.org by conventional-commits
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'ref/heads/main' && github.events.inputs.conventional-commits == 'yes' && github.events.inputs.preid == 'stable'}}
+        run: |
+          npx lerna publish --conventional-graduate --yes
 
       - name: pack vsix
         id: pack-vsix
