feat: add retry for e2e test action

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -36,17 +36,27 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Download Simple Auth bits
-        run: |
-          $version=Get-Content packages/fx-core/templates/plugins/resource/simpleauth/version.txt
-          $tag = "simpleauth@"+$version
-          $fileName="Microsoft.TeamsFx.SimpleAuth_$version.zip"
-          $url = "https://github.com/OfficeDev/TeamsFx/releases/download/"+$tag+"/"+$fileName
-          Invoke-WebRequest $url -OutFile packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
-        shell: pwsh
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          shell: pwsh
+          command: |
+            $version=Get-Content packages/fx-core/templates/plugins/resource/simpleauth/version.txt
+            $tag = "simpleauth@"+$version
+            $fileName="Microsoft.TeamsFx.SimpleAuth_$version.zip"
+            $url = "https://github.com/OfficeDev/TeamsFx/releases/download/"+$tag+"/"+$fileName
+            Invoke-WebRequest $url -OutFile packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
 
       - name: Setup project
-        run: |
-          npm run setup
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          command: |
+            npm run setup
 
       - name: Package CLI and install
         run: |
