--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -100,7 +100,7 @@ jobs:
       - name: release alpha npm packages to npmjs.org
         if: ${{ github.event_name == 'schedule' }}
         run: |
-          npx lerna publish --no-private --preid=alpha.$(git rev-parse --short HEAD) --dist-tag=alpha.$(git rev-parse --short HEAD) prerelease --no-git-tag-version --no-changelog --no-push --no-git-reset --yes --allow-branch dev
+          npx lerna publish --no-private --preid=alpha.$(git rev-parse --short HEAD) --dist-tag=alpha prerelease --no-git-tag-version --no-changelog --no-push --no-git-reset --yes --allow-branch dev
 
       - name: release rc npm packages to npmjs.org
         if: ${{ github.event_name == 'workflow_dispatch' && startsWith(github.event.inputs.version, 'pre') && github.events.inputs.conventional-commits == 'no'}}
