--- a/.github/workflows/sdk-ci.yml
+++ b/.github/workflows/sdk-ci.yml
@@ -44,7 +44,8 @@ jobs:
 
       - name: Setup project
         run: |
-          npm run bootstrap
+          npm install
+        working-directory: ./packages/sdk
 
       - name: Unit Test
         run: |
