--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,7 +21,7 @@
     "prepare": "npm run build",
     "lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
     "doc": "typedoc",
-    "test:unit": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/**/*.ts",
+    "test:unit": "nyc --reporter=html --reporter=json-summary --reporter=text mocha --no-timeouts --require ts-node/register tests/**/*.ts",
     "prepublishOnly": "npm run test:unit && npm run build",
     "precommit": "lint-staged"
   },
