--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -15,7 +15,7 @@
     "test:simpleauth": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/simpleauth/**/*.test.ts",
     "test:appstudio": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/appstudio/**/*.test.ts",
     "test:actions": "echo 'to be implemented'",
-    "test:unit": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/**/*.test.ts",
+    "test:unit": "nyc --reporter=html --reporter=json-summary --reporter=text mocha --no-timeouts --require ts-node/register tests/**/*.test.ts",
     "test:solution": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/solution/*.test.ts",
     "test:core": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/core/*.test.ts",
     "clean": "rm -rf build",
