chore(sdk): add coverage for node unit tests

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,15 +26,15 @@
     "integration-test:browser-case": "karma start --single-run --glob=./dist-test/index.integration.browser.js",
     "integration-test:browser": "node test/integration/scripts/DownloadSimpleAuth.js && concurrently --kill-others --success first \"node test/integration/scripts/StartSimpleAuth.js\" \"npm run integration-test:browser-case\"",
     "integration-test:node": "mocha -r test/mocha.env.ts -r ts-node/register \"./test/integration/node/*.spec.ts\" --timeout 100000 --exit --reporter ./tools/mocha-multi-reporter.js",
-    "test:integration": "npm run integration-test:node && npm run integration-test:browser",
+    "test:e2e": "npm run integration-test:node && npm run integration-test:browser",
     "lint:staged": "lint-staged",
     "lint": "eslint \"**/*.ts\"",
     "prebuild": "npm run clean",
     "test:browser": "npm run build:test && npm run unit-test:browser && npm run integration-test:browser",
     "test:node": "npm run build:test && npm run unit-test:node && npm run integration-test:node",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "npm run test:unit && npm run test:e2e",
     "unit-test:browser": "karma start --single-run --glob=./dist-test/index.unit.browser.js",
-    "unit-test:node": "mocha dist-test/index.node.js --reporter ./tools/mocha-multi-reporter.js",
+    "unit-test:node": "nyc --reporter=html --reporter=json-summary --reporter=text mocha --no-timeouts -r test/mocha.env.ts --require ts-node/register test/unit/node/**/*.spec.ts test/unit/*.spec.ts",
     "test:unit": "npm run build:test && npm run unit-test:node && npm run unit-test:browser",
     "e2e-test": "mocha --no-timeouts -r test/mocha.env.ts -r ts-node/register test/e2e/**/*.spec.ts --exit",
     "precommit": "lint-staged"
