--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -100,7 +100,7 @@ jobs:
       - name: release alpha npm packages to npmjs.org
         if: ${{ github.event_name == 'schedule' }}
         run: |
-          npx lerna version --no-private --conventional-prerelease --preid=alpha.$(git rev-parse --short HEAD) --no-push --allow-branch dev --yes
+          npx lerna version --no-private prerelease --preid=alpha.$(git rev-parse --short HEAD) --no-push --allow-branch dev --yes
           npx lerna publish from-package --dist-tag=alpha --yes --allow-branch dev
 
       - name: release rc npm packages to npmjs.org
@@ -131,7 +131,7 @@ jobs:
           max_attempts: 10
           retry_on: error
           command: |
-            sleep 5
+            sleep 20
             cd ./packages/vscode-extension
             npm install
             npx vsce package
