chore: daily build skip published version (#1475)
* chore: daily build skip published version

* chore: delay more time before pack visx

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -80,3 +80,5 @@
 /packages/simpleauth @adashen @blackchoey @wenytang-ms
 
 /packages/function-extension @adashen @blackchoey @dilin-MS
+
+/.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
