--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "bootstrap": "lerna bootstrap",
         "lint:staged": "lerna run lint:staged --stream",
         "lint": "lerna run lint --stream",
+        "manual-version": "lerna version --preid=rc --no-push --no-changelog --no-private",
         "version": "lerna bootstrap --ignore-scripts -- --package-lock-only --no-audit && git add packages/*/package-lock.json",
         "prepare": "husky install"
     },
