--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,7 +22,7 @@
     "test:e2e:clean": "ts-node tests/e2e/clean.ts",
     "test:e2e:smoke": "mocha --no-timeouts --require ts-node/register tests/e2e/smoke/*.tests.ts",
     "test:e2e:others": "mocha --no-timeouts --require ts-node/register tests/e2e/{,!(smoke)}/*.tests.ts",
-    "test:unit": "echo 'to be implementd'",
+    "test:unit": "nyc --reporter=html --reporter=json-summary --reporter=text mocha --no-timeouts --require ts-node/register tests/unit/**/*.ts",
     "test:integration": "echo 'to be implementd'",
     "check-format": "prettier --list-different --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
     "format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
@@ -55,6 +55,7 @@
     "@types/md5": "^2.3.0",
     "@types/mocha": "^8.0.4",
     "@types/node": "^12.11.7",
+    "@types/sinon": "^9.0.10",
     "@types/tedious": "^4.0.3",
     "@types/underscore": "^1.11.0",
     "@types/uuid": "^8.3.0",
@@ -76,6 +77,7 @@
     "nyc": "^15.1.0",
     "path-browserify": "^1.0.1",
     "sass-loader": "^11.1.1",
+    "sinon": "^9.2.2",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.2",
     "ts-loader": "^9.2.2",
