fix(vsc): collapse feedback tree view container

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -98,7 +98,8 @@
         },
         {
           "id": "teamsfx-feedback",
-          "name": "Feedback"
+          "name": "Feedback",
+          "visibility": "collapsed"
         }
       ]
     },
