--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -114,6 +114,7 @@
     "node-machine-id": "^1.1.12",
     "open": "^7.3.1",
     "tedious": "^9.2.1",
+    "tree-kill": "^1.2.2",
     "underscore": "^1.12.1",
     "yargs": "^16.2.0"
   },
