fix(cd): clean git after release template

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -72,7 +72,7 @@ jobs:
             ./*.zip
 
       - name: cleanup templates
-        run: rm -rf ./*.zip
+        run: rm -rf ./*.zip && git clean -df
 
       - name: Download Simple Auth bits
         uses: nick-invision/retry@v2
