--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -96,6 +96,7 @@
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.0.6",
+    "@azure/msal-node-extensions": "1.0.0-alpha.8",
     "@microsoft/teamsfx-api": "^0.2.1",
     "@microsoft/teamsfx-core": "^0.2.1",
     "adm-zip": "^0.5.5",
