feat(localdebug): add run icon

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -139,6 +139,49 @@
           "group": "inline"
         }
       ],
+      "editor/title": [
+        {
+          "command": "fx-extension.debug",
+          "when": "!inDebugMode && debuggersAvailable && fx-extension.active",
+          "group": "navigation"
+        }
+      ],
+      "editor/title/run": [
+        {
+          "command": "fx-extension.selectAndDebug",
+          "when": "!inDebugMode && debuggersAvailable && fx-extension.active",
+          "group": "teamsfx"
+        },
+        {
+          "command": "fx-extension.debugDefault",
+          "when": "!inDebugMode && debuggersAvailable && fx-extension.active",
+          "group": "teamsfx"
+        }
+      ],
+      "explorer/context": [
+        {
+          "command": "fx-extension.selectAndDebug",
+          "when": "!inDebugMode && debuggersAvailable && fx-extension.active",
+          "group": "teamsfx@1"
+        },
+        {
+          "command": "fx-extension.debugDefault",
+          "when": "!inDebugMode && debuggersAvailable && fx-extension.active",
+          "group": "teamsfx@2"
+        }
+      ],
+      "editor/context": [
+        {
+          "command": "fx-extension.selectAndDebug",
+          "when": "!inDebugMode && debuggersAvailable && fx-extension.active",
+          "group": "teamsfx@1"
+        },
+        {
+          "command": "fx-extension.debugDefault",
+          "when": "!inDebugMode && debuggersAvailable && fx-extension.active",
+          "group": "teamsfx@2"
+        }
+      ],
       "commandPalette": [
         {
           "command": "fx-extension.signOut",
@@ -267,6 +310,21 @@
         "command": "fx-extension.backend-extensions-install",
         "title": "Teams - Backend Extensions Install",
         "enablement": "never"
+      },
+      {
+        "command": "fx-extension.selectAndDebug",
+        "title": "Select and Start Debuging Teams App",
+        "icon": "$(run)"
+      },
+      {
+        "command": "fx-extension.debugDefault",
+        "title": "Start Debuging Teams App",
+        "icon": "$(run)"
+      },
+      {
+        "command": "fx-extension.debug",
+        "title": "Go to debug view",
+        "icon": "$(run)"
       }
     ],
     "taskDefinitions": [
