--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -28,13 +28,7 @@ jobs:
           dotnet-version: 3.1.x
 
       - name: Download Simple Auth bits
-        run: |
-          $version=Get-Content packages/fx-core/templates/plugins/resource/simpleauth/version.txt
-          $tag = "simpleauth@"+$version
-          $fileName="Microsoft.TeamsFx.SimpleAuth_$version.zip"
-          $url = "https://github.com/OfficeDev/TeamsFx/releases/download/"+$tag+"/"+$fileName
-          Invoke-WebRequest $url -OutFile packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
-        shell: pwsh
+        uses: ./.github/workflows/download-simpleauth
 
       - name: Setup project
         run: |
@@ -71,13 +65,7 @@ jobs:
           dotnet-version: 3.1.x
 
       - name: Download Simple Auth bits
-        run: |
-          $version=Get-Content packages/fx-core/templates/plugins/resource/simpleauth/version.txt
-          $tag = "simpleauth@"+$version
-          $fileName="Microsoft.TeamsFx.SimpleAuth_$version.zip"
-          $url = "https://github.com/OfficeDev/TeamsFx/releases/download/"+$tag+"/"+$fileName
-          Invoke-WebRequest $url -OutFile packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
-        shell: pwsh
+        uses: ./.github/workflows/download-simpleauth
 
       - name: Setup project
         run: |
